Revision history for MooseX-Types

{{$NEXT}}

0.48      2016-12-07 01:15:14Z
        - reverted is_Foo and to_Foo refactoring [from 0.47] for now, so they
          can be reworked

0.47      2016-12-07 00:40:34Z
        - allow type libraries built with MooseX::Types::Combine to be
          combined with MooseX::Types::Combine. (GH #1, Mark Fowler).
        - made the exported is_Foo and to_Foo subs much faster, especially for
          type constraints which can be inlined [reverted in 0.48]

0.46      2015-08-16 00:43:46Z
        - make use of Sub::Exporter::ForMethods's new rebless option

0.45      2014-09-02 01:17:50Z
        - increase the required versions of some prerequisites

0.44      2014-03-09 04:16:20Z
        - full respect for namespaces: declared types are now properly
          installed into the proper package, so they survive
          namespace::autoclean; however, types imported from the declaration
          class are still properly cleaned by namespace::autoclean (as
          implemented in trial versions 0.40-0.43)

0.43      2014-01-17 01:25:55Z (TRIAL RELEASE)
        - line numbers in shipped code are now almost the same (within 3) as
          the repository source, for easier debugging
        - skipped new namespacing tests that fail with older Moose versions,
          due to an inability to install blessed subs

0.42      2014-01-04 23:31:58Z (TRIAL RELEASE)
        - declared (not imported) types are now properly installed into the
          proper package, so they survive namespace::autoclean (fixed this
          time)

0.41      2013-12-21 17:21:41Z
        - reversed changes in 0.40, until compatibility issues with older
          Moose versions are figured out

0.40      2013-12-20 06:38:15Z
        - types are now properly installed into the proper package, so they
          survive namespace::autoclean

0.39      2013-11-30 18:31:32Z
        - more strict warnings checking in tests
        - re-release to fix compile test